2019-8-15 关闭进程，controller结果封装，发邮件